--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "formik": "^2.0.6",
+    "node-sass": "^4.13.0",
+    "primeicons": "^2.0.0",
+    "primereact": "^3.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-sanfona": "^1.4.0",
+    "react-scripts": "3.2.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://dnd5eapi.co/api"
 }
