--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dnd_5e_charachter_sheet",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://christianagha.github.io/dnd_5e_charachter_sheet/",
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://dnd5eapi.co/api"
+  "proxy": "http://dnd5eapi.co/api",
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  }
 }
