--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://dnd5eapi.co/api",
+  "proxy": "http://www.dnd5eapi.co/api",
   "devDependencies": {
     "gh-pages": "^2.1.1"
   }
